fixed bg resizing on smaller devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2452,9 +2452,9 @@
         webkit-transition: background-image 1s;
         /*transition-timing-function: ease-in-out;*/
 
-        background-position: top left;
+        background-position: top center;
 		background-repeat:  no-repeat;
-		background-size:  cover;
+		background-size: cover;
 		color: #fff;
 		cursor: default;
 		padding: 6em 0;
@@ -2774,9 +2774,9 @@
 
 		/* Banner */
 
-			#banner {
+			/*#banner {
 				background-size: 15em, 15em, auto, cover;
-			}
+			}*/
 
 		/* Main */
 
@@ -3217,8 +3217,8 @@
 		/* Banner */
 
 			#banner {
-				background-size: 10em, 10em, auto, cover;
-				padding: 6em 0;
+				/*background-size: 10em, 10em, auto, cover;*
+				padding: 6em 0;*/
 			}
 
 				#banner .inner {
